Closed Bug 480323 Opened 15 years ago Closed 15 years ago

[FIX]Always create trailing inline for {ib} splits

Categories

(Core :: Layout, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: bzbarsky, Assigned: bzbarsky)

References

Details

Attachments

(1 file, 2 obsolete files)

Our current behavior of not creating one increases complexity, and looks to be wrong per spec in any case.  Patch coming up.

One concern is anchors containing blocks.  With this patch we'll get a dot for the outline around the trailing inline just like we get one for the leading inline already... I had to adjust the tests for bug 424236 accordingly.  I think we might want to suppress outline on empty special inlines, maybe.  In any case, that would be a separate bug.
Attached patch Like so (obsolete) — Splinter Review
Assignee: nobody → bzbarsky
Status: NEW → ASSIGNED
Attachment #364324 - Flags: superreview?
Attachment #364324 - Flags: review?
Attachment #364324 - Flags: superreview?(dbaron)
Attachment #364324 - Flags: superreview?
Attachment #364324 - Flags: review?(dbaron)
Attachment #364324 - Flags: review?
You may need to tweak getBoundingClientRect/getClientRect mochitests too.
Oh, hmm.  I should in fact run mochitest on this patch.  Will do.
Attached patch Passing mochitest (obsolete) — Splinter Review
Attachment #364324 - Attachment is obsolete: true
Attachment #364427 - Flags: superreview?(dbaron)
Attachment #364427 - Flags: review?(dbaron)
Attachment #364324 - Flags: superreview?(dbaron)
Attachment #364324 - Flags: review?(dbaron)
Attachment #364427 - Attachment is obsolete: true
Attachment #364578 - Flags: superreview?(dbaron)
Attachment #364578 - Flags: review?(dbaron)
Attachment #364427 - Flags: superreview?(dbaron)
Attachment #364427 - Flags: review?(dbaron)
Comment on attachment 364578 [details] [diff] [review]
Minor tweak: when appending to an {ib} split, continue appending to the block if the trailing inline is empty

David says he's ok with this in principle, and ok with roc doing the review.
Attachment #364578 - Flags: superreview?(roc)
Attachment #364578 - Flags: superreview?(dbaron)
Attachment #364578 - Flags: review?(roc)
Attachment #364578 - Flags: review?(dbaron)
Attachment #364578 - Flags: superreview?(roc)
Attachment #364578 - Flags: superreview+
Attachment #364578 - Flags: review?(roc)
Attachment #364578 - Flags: review+
Pushed http://hg.mozilla.org/mozilla-central/rev/6feb1a304aef
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Depends on: 481769
This caused bug 481769 because we don't treat the ib siblings as in-flows when painting backgrounds.  We should.
Blocks: 480979
Depends on: 480452
Blocks: 46217
Depends on: 517372
Product: Core → Core Graveyard
Component: Layout: Misc Code → Layout
Product: Core Graveyard → Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: