Bug 480323.  Always create a trailing inline for {ib} splits.  r+sr=dbaron